# VSB

./: .gitignore  .gitmodules  README.md
CPP/Projekt/: CMakeLists.txt  README.md  TASK.md  TODO.md  argParser.cpp  main.cpp  server.cpp  server.hpp  socket.cpp  socket.hpp
CPP/Projekt/_testing/: example.ini  index.html  main.ini  page2.html  test.xml
CPP/Projekt/_testing/configs/: druhastranka.ini  prvnistranka.ini
CPP/Projekt/_testing/html/: aa.test  index.html
CPP/Projekt/htmls/: default_code.html
CPP/Projekt/server/: payload.cpp  payload.hpp  request.cpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp
CPP/Projekt/server/modes/: devMode.cpp  devMode.hpp  mainMode.cpp  mainMode.hpp  serverMode.cpp  serverMode.hpp
CPP/Projekt/socket/: socket.cpp  socket.hpp
CPP/Projekt/utils/: argParser.cpp  argParser.hpp  decode.cpp  decode.hpp  fileRead.cpp  fileRead.hpp  hostConfig.cpp  hostConfig.hpp  iniParser.cpp  iniParser.hpp  logger.cpp  logger.hpp  mimeType.cpp  mimeType.hpp  threadPool.cpp  threadPool.hpp  utils.cpp  utils.hpp
Semester4/CPP/DU1/: CMakeLists.txt  assignment.md  main.cpp  tests.cpp
Semester4/CPP/DU2/: CMakeLists.txt  main.cpp  tasks.cpp  tasks.h
Semester4/CPP/DU9/current/: CMakeLists.txt  array.cpp  constexpr.cpp  parser.cpp
Semester5/OSY/PC09/: CMakeLists.txt  main.cpp
Semester5/SPR/10_Super-long-sums/: CMakeLists.txt  main.cpp
Semester7/DZO/C01/: CMakeLists.txt  main.cpp
Semester7/DZO/C02/: CMakeLists.txt  main.cpp
Semester7/DZO/C07/: CMakeLists.txt  main.cpp
Semester7/PG1/: CMakeLists.txt  compile_commands.json  install.txt
Semester7/PG1/data/: 6887_allied_avenger.mtl  brown_photostudio_02_1k.exr  geosphere.mtl  hayloft_1k.exr  test.exr  test.hdr
Semester7/PG1/src/: imgui.ini  main.cpp
Semester7/PG1/src/camera/: camera.cpp  camera.hpp
Semester7/PG1/src/lib/: pg1_embree.cpp  pg1_embree.vcxproj  pg1_embree.vcxproj.filters  raytracer.cpp  raytracer.h  simpleguidx11.cpp  simpleguidx11.h  stdafx.h
Semester7/PG1/src/light/: light.hpp
Semester7/PG1/src/material/: material.cpp  material.hpp
Semester7/PG1/src/objloader/: objloader.cpp  objloader.hpp
Semester7/PG1/src/raytracer/: raytracer.cpp  raytracer.hpp
Semester7/PG1/src/simplegui/: simpleguidx11.cpp  simpleguidx11.hpp
Semester7/PG1/src/spherical_map/: spherical_map.cpp  spherical_map.hpp
Semester7/PG1/src/texture/: texture.cpp  texture.hpp
Semester7/PG1/src/ui/: gui_linux.cpp  gui_linux.hpp  simpleguidx11_linux.cpp  simpleguidx11_linux.hpp
Semester7/PG1/src/utils/: math.hpp  structs.hpp  surface.cpp  surface.hpp  triangle.cpp  triangle.hpp  utils.cpp  utils.hpp  vertex.cpp  vertex.hpp
Semester7/PvR/c05/: Cargo.toml
Semester7/PvR/c05/src/: main.rs
Semester7/PvR/c06/playground/: Cargo.toml
Semester7/PvR/c06/uwuifythis/: Cargo.toml
Semester8/PG2/: CMakeLists.txt  TODO.md  compile_commands.json  pg2.txt  pg2_tasks.txt
Semester8/PG2/.github/: copiolot-instructions.md
Semester8/PG2/models/: 6887_allied_avenger_gi.mtl
Semester8/PG2/shaders/fragment/: BaseBlinn.frag  BasePBR.frag  DepthOnly.frag  ShadowDarken.frag  StencilDebug.frag
Semester8/PG2/shaders/geometry/: ShadowVolume.geom
Semester8/PG2/shaders/vertex/: Base.vert  DepthOnly.vert  ShadowDarken.vert  ShadowVolume.vert
Semester8/PG2/src/: Camera.cpp  Camera.hpp  Controller.cpp  Controller.hpp  Rasterizer.cpp  Rasterizer.hpp  Window.cpp  attributes.hpp  main.cpp
Semester8/PG2/src/Light/: DirectionalLight.cpp  Flashlight.cpp  Light.cpp  ReflectorLight.hpp
Semester8/PG2/src/Modifiers/: Drawable.cpp  Drawable.hpp
Semester8/PG2/src/Object/: IndexedObjectData.hpp  ObjectData.cpp  ObjectData.hpp  ObjectDataStorage.cpp  ObjectDataStorage.hpp  Objects.hpp  SkyBox.hpp
Semester8/PG2/src/Patterns/: Observable.hpp
Semester8/PG2/src/Scenes/: Forest.cpp  (+1 more)
ZPG/: CMakeLists.txt  TODO.md  compile_commands.json  form.txt  form2.txt  login.blend  notes.md
ZPG/shaders/fragment/: BaseBlinn.frag  BaseBlinnBack.frag  BaseBlinnBack2.frag  BaseBlinnBack3.frag  BaseBlinnOld.frag  BaseLambert.frag  BasePhong.frag  BlinnPhong.frag  Blue.frag  ColorByCoords.frag  Green.frag  GreenByCoords.frag  GreenDark.frag  Lambert.frag  Light.frag  Phong.frag  Purple.frag  Red.frag
ZPG/shaders/vertex/: Base.vert  BaseBack.vert  BaseOld.vert  ColorByCoords.vert  GreenByCoords.vert  IdkBarvy.vert  Lambert.vert  Light.vert  Phong.vert  Purple.vert  Rotation.vert  RotationStaticColor.vert
ZPG/src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Controller.cpp  Controller.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Window.cpp  Window.hpp  main.cpp
ZPG/src/Factories/: ObjectFactory.cpp  ObjectFactory.hpp
ZPG/src/Light/: BallLight.cpp  BallLight.hpp  DirectionalLight.hpp  Flashlight.cpp  Flashlight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  ReflectorLight.cpp  ReflectorLight.hpp
ZPG/src/Modifiers/: BasicAttribute.hpp  Drawable.cpp  Drawable.hpp  Transformable.hpp
ZPG/src/Object/: BaseObject.cpp  BaseObject.hpp  DrawableObject.cpp  DrawableObject.hpp  IndexedObjectData.cpp  IndexedObjectData.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  ObjectData.cpp  ObjectData.hpp  ObjectDataStorage.hpp  Objects.cpp  Objects.hpp  SkyBox.cpp  SkyBox.hpp  Transformations.cpp  Transformations.hpp
ZPG/src/Patterns/: Observable.cpp  Observable.hpp  Observer.hpp
ZPG/src/Scenes/: DarkForest.cpp  DarkForest.hpp  DifferentLight.cpp  DifferentLight.hpp  Forest.cpp  Forest.hpp  Light.cpp  Light.hpp  LightBalls.cpp  LightBalls.hpp  Objects.cpp  Objects.hpp  Scene.cpp  Scene.hpp  StaticScene.hpp
ZPG/src/Shader/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderStorage.cpp  ShaderStorage.hpp
ZPG/src/Transformation/: DynamicRotation.cpp  DynamicRotation.hpp  DynamicTransformation.cpp  DynamicTransformation.hpp  RandomTranslate.cpp  RandomTranslate.hpp  Rotation.cpp  Rotation.hpp  Scale.cpp  Scale.hpp  Transformation.cpp  Transformation.hpp  Translate.cpp  Translate.hpp  UpdatableTranslate.hpp
(+3718 files in other folders)
