[package]
name = "week05-exercises"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1"
sysinfo = "0.37.2"
colored = "3.0.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6.5"
